backend/k8s-objects/books-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books
  namespace: litlink
spec:
  replicas: 3
  selector:
    matchLabels:
      app: books
  template:
    metadata:
      labels:
        app: books
    spec:
      containers:
      - name: books-container
        image: ghcr.io/spehic/books:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: books-service
  namespace: litlink
spec:
  type: ClusterIP
  selector:
    app: books
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
