backend/k8s-objects/lists-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lists
  namespace: litlink
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lists
  template:
    metadata:
      labels:
        app: lists
    spec:
      containers:
      - name: lists-container
        image: ghcr.io/spehic/lists:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "200m"
            memory: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: lists-service
  namespace: litlink
spec:
  type: ClusterIP
  selector:
    app: lists
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
