backend/k8s-objects/notifications-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications
  namespace: litlink
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notifications
  template:
    metadata:
      labels:
        app: notifications
    spec:
      containers:
      - name: notifications-container
        image: ghcr.io/spehic/notifications:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "40m"
            memory: "256Mi"
          limits:
            cpu: "100m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: notifications-service
  namespace: litlink
spec:
  type: ClusterIP
  selector:
    app: notifications
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
