backend/k8s-objects/ratings-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratings
  namespace: litlink
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ratings
  template:
    metadata:
      labels:
        app: ratings
    spec:
      containers:
      - name: ratings-container
        image: ghcr.io/spehic/ratings:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "40m"
            memory: "256Mi"
          limits:
            cpu: "100m"
            memory: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: ratings-service
  namespace: litlink
spec:
  type: ClusterIP
  selector:
    app: ratings
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
