backend/k8s-objects/recommendations-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendations
  namespace: litlink
spec:
  replicas: 3
  selector:
    matchLabels:
      app: recommendations
  template:
    metadata:
      labels:
        app: recommendations
    spec:
      containers:
      - name: recommendations-container
        image: ghcr.io/spehic/recommendations:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: recommendations-service
  namespace: litlink
spec:
  type: ClusterIP
  selector:
    app: recommendations
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
