backend/k8s-objects/users-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  namespace: litlink
spec:
  replicas: 2
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
      - name: users-container
        image: ghcr.io/spehic/users:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "200m"
            memory: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: users-service
  namespace: litlink
spec:
  type: ClusterIP
  selector:
    app: users
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
