backend/k8s-objects/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: litlink-ingress
  namespace: litlink
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - http:
      paths:
      - backend:
          service:
            name: users-service
            port:
              number: 8080
        path: /v1/users
        pathType: Prefix
      
      - backend:
          service:
            name: lists-service
            port:
              number: 8080
        path: /v1/lists
        pathType: Prefix

      - backend:
          service:
            name: ratings-service
            port:
              number: 8080
        path: /v1/ratings
        pathType: Prefix

      - backend:
          service:
            name: notifications-service
            port:
              number: 8080
        path: /v1/notifications
        pathType: Prefix

      - backend:
          service:
            name: books-service
            port:
              number: 8080
        path: /v1/books
        pathType: Prefix

      - backend:
          service:
            name: recommendations-service
            port:
              number: 8080
        path: /v1/recommendations
        pathType: Prefix
